kubernetes/apps/kube-system/cilium/gateway/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: &hostname external.rphilipsen.nl
  labels:
    gateway: external
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.16.20.30
    # - type: IPAddress
    #   value: 2a02:a446:fe34:20:172:16:20:30
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.rphilipsen.nl"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.rphilipsen.nl"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
          - kind: TLSRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: rphilipsen-nl-tls
