kubernetes/apps/kube-system/cilium/gateway/hubble-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "cilium-hubble-ui"
  namespace: "kube-system"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "hubble.rphilipsen.nl"
  rules:
    - matches:
        - path:
            type: "PathPrefix"
            value: "/"
      backendRefs:
        - name: "hubble-ui"
          port: 80
